# polyphonic-eval

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.d2  index.md  migration.md  quickstart.md  theory.md
docs/adapters/: langgraph.md  lm_eval.md
docs/design/: 0001-no-consensus-collapse.md  0002-jargon-ceiling.md  0003-embedder-protocol.md
examples/: 01_quickstart.py  02_langgraph_jury.py  03_lm_eval_task.yaml  04_custom_embedder.py
scripts/: setup-pypi-publisher.sh
src/polyphonic_eval/: __init__.py  cli.py  cluster.py  collapse.py  consensus.py  core.py  embed.py  irreducible.py  spectrum.py  types.py
src/polyphonic_eval/adapters/: __init__.py  langgraph.py  lm_eval.py
src/polyphonic_eval/io/: __init__.py  json_codec.py  jsonl.py
tests/: conftest.py
tests/adapters/: test_langgraph.py  test_lm_eval.py
tests/property/: test_is_irreducible_fpr.py  test_no_consensus_collapse.py
tests/unit/: test_cli.py  test_cluster.py  test_collapse.py  test_consensus.py  test_core.py  test_embed.py  test_io.py  test_irreducible.py  test_spectrum.py  test_types.py
