[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "polyphonic-eval"
version = "0.1.2"
description = "Multi-judge LLM evaluation that returns typed disagreement structure instead of collapsing it to a scalar."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "polyphonic-eval contributors" }]
keywords = [
    "llm",
    "evaluation",
    "multi-judge",
    "disagreement",
    "aggregation",
    "polyphonic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.7,<3",
    "numpy>=1.26,<3",
    "scipy>=1.14,<2",
    "scikit-learn>=1.5,<2",
    "hdbscan>=0.8.40,<1",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=2.5"]
langgraph = ["langgraph>=0.2"]
lm-eval = ["lm-eval>=0.4"]
all = [
    "sentence-transformers>=2.5",
    "langgraph>=0.2",
    "lm-eval>=0.4",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-benchmark>=4",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "build>=1.2",
    "twine>=5",
]

[project.scripts]
polyphonic-eval = "polyphonic_eval.cli:main"

[project.urls]
Homepage = "https://github.com/hinanohart/polyphonic-eval"
Repository = "https://github.com/hinanohart/polyphonic-eval"
Documentation = "https://github.com/hinanohart/polyphonic-eval#readme"
Issues = "https://github.com/hinanohart/polyphonic-eval/issues"
Changelog = "https://github.com/hinanohart/polyphonic-eval/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/polyphonic_eval"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "C4",
    "PIE",
    "PT",
    "RET",
    "PL",
    "TRY",
]
ignore = [
    "PLR0913",
    "PLR2004",
    "TRY003",
    "E501",
    "PLC0415",
    "RUF002",
    "PLW2901",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PLW0108", "RUF059"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_any_unimported = true
show_error_codes = true
files = ["src/polyphonic_eval"]
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = [
    "hdbscan",
    "sklearn.*",
    "scipy.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that take >1s",
    "integration: tests requiring external resources",
]

[tool.coverage.run]
source = ["src/polyphonic_eval"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
